--- a/index.html
+++ b/index.html
@@ -394,9 +394,17 @@
                                         <div class="form-group">
                                             <textarea class="form-control" id="form-contact-message" rows="8" name="message" placeholder="Mensagem" required></textarea>
                                         </div>
+                                        
+
+                                        <div class="form-group action-line">
+                                            <div class="status"></div>
+                                            <img class="loading" src="/assets/img/tube-spinner.svg" width="30px" height="30px"/>
+                                        </div>
+
                                         <button type="submit" class="btn btn-default btn-framed btn-rounded arrow">
                                             Entrar em contato
                                         </button>
+                                        
                                     </form>
                                 </div>
                                 <!--end col-md-5-->
@@ -528,7 +536,7 @@
                                 <!--end row -->
                                 <div class="form-group action-line">
                                     <div class="status"></div>
-                                    <img class="loading" src="../assets/img/tube-spinner.svg" width="30px" height="30px"/>
+                                    <img class="loading" src="/assets/img/tube-spinner.svg" width="30px" height="30px"/>
                                     <button type="submit" class="btn pull-right btn-primary btn-rounded" id="form-contact-submit">Enviar</button>
                                 </div>
                                 <!--end form-group -->
