--- a/aura/index.html
+++ b/aura/index.html
@@ -60,6 +60,17 @@
                     <div class="right">
                         <ul class="nav navigation-links animate">
                             <li><a href="/" class="scroll" title="Home">Home</a></li>
+                            <li>
+                                <a>Residências</a>
+                                <ul>
+                                    <li><a href="/aura">Aura</a></li>
+                                    <li><a href="/evidencias">Evidencias</a></li>
+                                    <li><a href="/#contato">Piemonte</a></li>
+                                    <li><a href="/#contato">Brescia</a></li>
+                                    <li><a href="/#contato">Indaiá</a></li>
+                                    <li><a href="/#contato">Serenità</a></li>
+                                </ul>
+                            </li>
                             <li><a href="#about" class="scroll" title="Sobre">Sobre</a></li>
                             <li><a href="#gallery" class="scroll" title="Galeria">Galeria</a></li>
                             <li><a href="#contact" class="scroll" title="Contato">Contato</a></li>
@@ -87,7 +98,7 @@
                             </p>
                         </div>
                         <div class="animate">
-                            <a href="#contact" class="btn btn-rounded btn-default scroll" title="Saiba mais">
+                            <a href="#contact" class="btn-rounded btn btn-default scroll" title="Saiba mais">
                                 Saiba mais
                             </a>
                         </div>
@@ -127,7 +138,7 @@
                                 <p>
                                     O Condomínio Reserva Petrus conta com segurança robusta, infraestrutura moderna e é cercado por uma exuberante área verde. Além disso, possui fácil acesso às principais vias de Indaiatuba.
                                 </p>
-                                <a href="#contact" class="btn btn-default btn-rounded arrow scroll" title="Saiba mais">Saiba mais</a>
+                                <a href="#contact" class="btn-rounded btn btn-default arrow scroll" title="Saiba mais">Saiba mais</a>
                             </div>
                             <!--end description-->
                         </div>
@@ -141,7 +152,7 @@
                                 <p>
                                     Com 495m² de área construída em um terreno de 1.024m², espaço é o que não vai faltar para aproveitar toda a aura que essa casa oferece.
                                 </p>
-                                <a href="#contact" class="btn btn-default btn-rounded arrow scroll" title="Saiba mais">Saiba mais</a>
+                                <a href="#contact" class="btn-rounded btn btn-default arrow scroll" title="Saiba mais">Saiba mais</a>
                             </div>
                             <!--end description-->
                         </div>
@@ -155,7 +166,7 @@
                                 <p>
                                     Uma extensão viva dos ambientes que conecta natureza e arquitetura de forma harmoniosa. Transforma os espaços em refúgios de bem-estar, proporcionando uma sensação de tranquilidade e equilíbrio.
                                 </p>
-                                <a href="#contact" class="btn btn-default btn-rounded arrow scroll" title="Saiba mais">Saiba mais</a>
+                                <a href="#contact" class="btn-rounded btn btn-default arrow scroll" title="Saiba mais">Saiba mais</a>
                             </div>
                             <!--end description-->
                         </div>
@@ -191,7 +202,7 @@
                     <div class="col-md-6 col-sm-6">
                         <h3>Vídeo de apresentação</h3>
                         <a href="https://www.youtube.com/watch?v=F-GgOtKCnK0" class="video-player video-popup" data-scroll-reveal="enter bottom and move 50px" title="Video de apresentação">
-                            <i class="play-icon arrow_triangle-right"></i>
+                            <i class="arrow_triangle-right play-icon"></i>
                             <div class="has-overlay">
                                 <img src="../assets/img/aura/image-video.webp" alt="Miniatura vídeo" width="554" height="227">
                             </div>
@@ -204,7 +215,7 @@
             </div>
             <!--end container-->
             <div class="background-wrapper">
-                <div class="background-color background-color-black opacity-5"></div>
+                <div class="opacity-5 background-color background-color-black"></div>
             </div>
             <!--end background-wrapper-->
         </div>
@@ -212,7 +223,7 @@
 
         <div class="block">
             <div class="container">
-                <div class="detail right-align">
+                <div class="right-align detail">
                     <div class="title">
                         <h3 class="framed">Conforto & Elegância</h3>
                     </div>
@@ -554,7 +565,7 @@
                                 <div class="form-group action-line">
                                     <div class="status"></div>
                                     <img class="loading" src="../assets/img/tube-spinner.svg" width="30px" height="30px"/>
-                                    <button type="submit" class="btn pull-right btn-primary btn-rounded" id="form-contact-submit">Enviar</button>
+                                    <button type="submit" class="pull-right btn-rounded btn btn-primary" id="form-contact-submit">Enviar</button>
                                 </div>
                                 <!--end form-group -->
                             </form>
@@ -586,7 +597,7 @@
                     </div>
                     <!--end col-md-4-->
                     <div class="col-md-8 col-sm-8">
-                        <div class="contact-data text-align-right">
+                        <div class="text-align-right contact-data">
                             <span>+55 11 91496-5650</span>
                             <a href="#">schmid@schmid.com.br</a>
 
