--- a/evidencias/index.html
+++ b/evidencias/index.html
@@ -60,6 +60,17 @@
                     <div class="right">
                         <ul class="nav navigation-links animate">
                             <li><a href="/" class="scroll" title="Home">Home</a></li>
+                            <li>
+                                <a>Residências</a>
+                                <ul>
+                                    <li><a href="/aura">Aura</a></li>
+                                    <li><a href="/evidencias">Evidencias</a></li>
+                                    <li><a href="/#contato">Piemonte</a></li>
+                                    <li><a href="/#contato">Brescia</a></li>
+                                    <li><a href="/#contato">Indaiá</a></li>
+                                    <li><a href="/#contato">Serenità</a></li>
+                                </ul>
+                            </li>
                             <li><a href="#gallery" class="scroll" title="Galeria">Galeria</a></li>
                             <li><a href="#about" class="scroll" title="Sobre">Sobre</a></li>
                             <li><a href="#contact" class="scroll" title="Contato">Contato</a></li>
@@ -87,7 +98,7 @@
                             </p>
                         </div>
                         <div class="animate">
-                            <a href="#contact" class="btn btn-rounded btn-default scroll" title="Agende sua visita">
+                            <a href="#contact" class="btn-rounded btn btn-default scroll" title="Agende sua visita">
                                 Agende sua visita
                             </a>
                         </div>
@@ -269,7 +280,7 @@
                     <div class="col-md-6 col-sm-6" data-scroll-reveal="enter right and move 20px">
                         <h3>Vídeo de apresentação</h3>
                         <a href="https://www.youtube.com/watch?v=Z7iVSTQ_KKw" class="video-player video-popup" title="Video apresentação">
-                            <i class="play-icon arrow_triangle-right"></i>
+                            <i class="arrow_triangle-right play-icon"></i>
                             <div class="has-overlay">
                                 <img src="../assets/img/evidencias/image-video.webp" loading="lazy" alt="Miniatura vídeo" width="554" height="227">
                             </div>
@@ -332,7 +343,7 @@
                                 <p>
                                     Localizado em um condomínio fechado com segurança de alto nível, infraestrutura moderna e cercado por uma exuberante área verde, ainda oferece fácil acesso ao centro de Indaiatuba.
                                 </p>
-                                <a href="#contact" class="btn btn-primary btn-rounded arrow scroll" title="Saiba mais">Saiba mais</a>
+                                <a href="#contact" class="btn-rounded btn btn-primary arrow scroll" title="Saiba mais">Saiba mais</a>
                             </div>
                             <!--end description-->
                         </div>
@@ -347,7 +358,7 @@
                                 <p>
                                     Com 192m² de área construída em um lote de 306m², o empreendimento oferece espaços amplos e bem distribuídos, perfeitos para quem valoriza conforto e funcionalidade.
                                 </p>
-                                <a href="#contact" class="btn btn-primary btn-rounded arrow scroll" title="Saiba mais">Saiba mais</a>
+                                <a href="#contact" class="btn-rounded btn btn-primary arrow scroll" title="Saiba mais">Saiba mais</a>
                             </div>
                             <!--end description-->
                         </div>
@@ -362,7 +373,7 @@
                                 <p>
                                     Desfrute de momentos de relaxamento e diversão em uma área de lazer completa, incluindo piscina privativa integrada com cozinha. Espaço ideal para receber amigos e família com elegância e conforto
                                 </p>
-                                <a href="#contact" class="btn btn-primary btn-rounded arrow scroll" title="Siaba mais">Saiba mais</a>
+                                <a href="#contact" class="btn-rounded btn btn-primary arrow scroll" title="Siaba mais">Saiba mais</a>
                             </div>
                             <!--end description-->
                         </div>
@@ -419,7 +430,7 @@
                                 <div class="form-group action-line">
                                     <div class="status"></div>
                                     <img class="loading" src="../assets/img/tube-spinner.svg" width="30" height="30"/>
-                                    <button type="submit" class="btn pull-right btn-primary btn-rounded" id="form-contact-submit">Enviar</button>
+                                    <button type="submit" class="pull-right btn-rounded btn btn-primary" id="form-contact-submit">Enviar</button>
                                 </div>
                                 <!--end form-group -->
                             </form>
@@ -451,7 +462,7 @@
                     </div>
                     <!--end col-md-4-->
                     <div class="col-md-8 col-sm-8">
-                        <div class="contact-data text-align-right">
+                        <div class="text-align-right contact-data">
                             <span>+55 11 91496-5650</span>
                             <a href="#">schmid@schmid.com.br</a>
 
