--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <div class="wrapper">
                 <div class="hero-title">
                     <div class="container">
-                        <h1 class="animate">Elegância autêntica para viver bem.</h1>
+                        <h1 class="animate">Elegância autêntica <br />para viver bem.</h1>
                         <div class="animate">
                             <p class="width-50">
                                 Mais do que um investimento seguro, cada residência Schmid é um convite a viver com autenticidade, conforto e beleza em cada detalhe. Projetos que acolhem quem busca um lugar com significado e valorização real, no tempo e na experiência.
