--- a/index.html
+++ b/index.html
@@ -461,6 +461,7 @@
                                 <!--end col-md-7-->
                                 <div class="col-md-5 col-sm-5 animate show">
                                     <form class="form-has-background-padding" id="form-hero" method="post" class="clearfix">
+                                        <input type="hidden" id="page-form" value="Home"/>
                                         <h3>Faça cada momento valer a pena</h3>
                                         <div class="form-group">
                                             <input type="text" class="form-control" id="form-contact-name" name="name" placeholder="Nome *" required>
@@ -544,91 +545,6 @@
         </div>
         <!--end block-->
 
-        <div class="block" id="contato" style="display: none;">
-            <div class="container">
-                <h2>Contato</h2>
-                <div class="contact map">
-                    <div class="row">
-                        <div class="col-md-5 col-sm-5"  data-scroll-reveal="enter bottom and move 20px">
-                            <h3>Endereço da sua próxima residência</h3>
-                            <div style="overflow:hidden;max-width:100%;width:100%;height:235px;">
-                                <div id="my-map-canvas" style="height:100%; width:100%;max-width:100%;">
-                                    <iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=Estr.+Dr.+Rafael+Elias+José+Aun+-+Jardim+Morumbi,+Indaiatuba+-+SP,+13332-000&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8" title="Mapa"></iframe>
-                                </div>
-                                <a class="the-googlemap-enabler" href="https://www.bootstrapskins.com/themes" id="inject-map-data">
-                                    premium bootstrap themes
-                                </a>
-                                <style>
-                                #my-map-canvas img {
-                                    max-width:none!important;
-                                    background:none!important;
-                                    font-size: inherit;
-                                    font-weight:inherit;
-                                }
-                                </style>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-6 col-sm-6">
-                                    <h3>Endereço</h3>
-                                    <address>
-                                        Estr. Dr. Rafael Elias José Aun<br /> 
-                                        Jardim Morumbi, Indaiatuba - SP<br />
-                                        13332-000
-                                        <br />
-                                        <br />
-                                        +55 11 91496-5650
-                                    </address>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-7 col-sm-7" data-scroll-reveal="enter top and move 20px">
-                            <h3>Entre em contato</h3>
-                            <form id="form-contact" method="post" class="clearfix">
-                                <div class="row">
-                                    <div class="col-md-6 col-sm-6">
-                                        <div class="form-group">
-                                            <input type="text" class="form-control" id="form-contact-name" name="name" placeholder="Nome" required>
-                                        </div>
-                                        <!--end form-group -->
-                                    </div>
-                                    <!--end col-md-6 col-sm-6 -->
-                                    <div class="col-md-6 col-sm-6">
-                                        <div class="form-group">
-                                            <input type="email" class="form-control" id="form-contact-email" name="email" placeholder="E-mail" required>
-                                        </div>
-                                        <!--end form-group -->
-                                    </div>
-                                    <!--end col-md-6 col-sm-6 -->
-                                </div>
-                                <!--end row -->
-                                <div class="row">
-                                    <div class="col-md-12">
-                                        <div class="form-group">
-                                            <textarea class="form-control" id="form-contact-message" rows="8" name="message" placeholder="Mensagem" required></textarea>
-                                        </div>
-                                        <!--end form-group -->
-                                    </div>
-                                    <!--end col-md-12 -->
-                                </div>
-                                <!--end row -->
-                                <div class="form-group action-line">
-                                    <div class="status"></div>
-                                    <img class="loading" src="/assets/img/tube-spinner.svg" width="30px" height="30px"/>
-                                    <button type="submit" class="pull-right btn-rounded btn btn-primary" id="form-contact-submit">Enviar</button>
-                                </div>
-                                <!--end form-group -->
-                            </form>
-                            <!--end form-contact -->
-                        </div>
-                        <!--end col-md-6-->
-                    </div>
-                    <!--end row-->
-                </div>
-                <!--end contact map-->
-            </div>
-            <!--end container-->
-        </div>
-        <!--end block-->
 
         <div style="overflow:hidden;max-width:100%;width:100%;height:305px;">
             <div id="my-map-canvas" style="height:100%; width:100%;max-width:100%;">
