--- a/index.html
+++ b/index.html
@@ -545,24 +545,6 @@
         </div>
         <!--end block-->
 
-
-        <div style="overflow:hidden;max-width:100%;width:100%;height:305px;">
-            <div id="my-map-canvas" style="height:100%; width:100%;max-width:100%;">
-                <iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=Estr.+Dr.+Rafael+Elias+José+Aun+-+Jardim+Morumbi,+Indaiatuba+-+SP,+13332-000&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8" title="Mapa"></iframe>
-            </div>
-            <a class="the-googlemap-enabler" href="https://www.bootstrapskins.com/themes" id="inject-map-data">
-                premium bootstrap themes
-            </a>
-            <style>
-            #my-map-canvas img {
-                max-width:none!important;
-                background:none!important;
-                font-size: inherit;
-                font-weight:inherit;
-            }
-            </style>
-        </div>
-
         <footer id="page-footer" class="block">
             <div class="container">
                 <a href="/" class="brand" title="Schmid Incorporadora"> 
@@ -570,15 +552,8 @@
                 </a>
                 <!--end brand-->
                 <div class="row">
-                    <div class="col-md-4 col-sm-4">
-                        <p>
-                            Rod. Lix da Cunha, 5100<br>
-                            Cidade Nova II, Indaiatuba - SP<br>
-                            13347-530                            
-                        </p>
-                    </div>
                     <!--end col-md-4-->
-                    <div class="col-md-8 col-sm-8">
+                    <div class="col-md-8 col-sm-8 col-sm-offset-4">
                         <div class="text-align-right contact-data">
                             <span>+55 11 91496-5650</span>
                             <a href="#">schmid@schmid.com.br</a>
