--- a/evidencias/index.html
+++ b/evidencias/index.html
@@ -450,7 +450,7 @@
         <footer id="page-footer" class="block">
             <div class="container">
                 <a href="/" class="brand" title="Schmid Incorporadora"> 
-                    <img src="../assets/img/logo.png" alt="Schmid Incorporadora">
+                    <img src="../assets/img/logo-footer.webp" alt="Schmid Incorporadora">
                 </a>
                 <!--end brand-->
                 <div class="row">
