--- a/index.html
+++ b/index.html
@@ -343,6 +343,9 @@
                                     <a href="./assets/img/indaia/indaia1.webp" class="image" title="Indaiá">
                                         <img src="./assets/img/indaia/indaia1-585x330.webp" alt="Indaiá">
                                     </a>
+                                    <a href="./assets/img/serenita/serenita-1280x853.webp" class="image" title="Serenità">
+                                        <img src="./assets/img/serenita/serenita-585x330.webp" alt="Serenità">
+                                    </a>
                                     <a href="./assets/img/brescia/brescia1-1280x853.webp" class="image" title="Brescia">
                                         <img src="./assets/img/brescia/brescia1-585x330.webp" alt="Brescia">
                                     </a>
@@ -511,44 +514,10 @@
         </div>
         <!--end hero-section-->
 
-        <div class="block">
-            <div class="container">
-                <div class="logos">
-                    <div class="owl-carousel" data-owl-nav="1" data-owl-dots="0" data-owl-items="4" data-owl-items-mobile="2" data-owl-auto-width="0" data-owl-autoplay="0" data-owl-loop="0">
-                        <div class="logo">
-                            <span class="text">Mkt. e comunicação:</span>
-                            <a href="https://www.luziac.com.br/" title="Luziac" target="_blank">
-                                <img src="../assets/img/luziac-logo.webp" alt="Luziac" width="170" height="64">
-                            </a>
-                        </div>
-                        <div class="logo">
-                            <span class="text">Gerenciamento:</span>
-                            <img src="../assets/img/agilizza-logo.webp" alt="Agilizza" width="170" height="64">
-                        </div>
-                        <div class="logo">
-                            <span class="text">Arquitetura:</span>
-                            <a href="https://hausarquitetura.com.br/" title="Haus" target="_blank">
-                                <img src="../assets/img/haus-logo.webp" alt="Haus Arquitetura" width="170" height="64">
-                            </a>
-                        </div>
-                        <div class="logo">
-                            <span class="text">Empreiteiro:</span>
-                            <a href="https://dreamerengenharia.com.br/" title="Dreamer" target="_blank">
-                                <img src="../assets/img/dreamer-logo.webp" alt="Dreamer Engenharia" width="170" height="64">
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <!--end logos-->
-            </div>
-            <!--end container-->
-        </div>
-        <!--end block-->
-
         <footer id="page-footer" class="block">
             <div class="container">
                 <a href="/" class="brand" title="Schmid Incorporadora"> 
-                    <img src="assets/img/logo.png" alt="Schmid Incorporadora">
+                    <img src="assets/img/logo-footer.webp" alt="Schmid Incorporadora">
                 </a>
                 <!--end brand-->
                 <div class="row">
