--- a/live-aura-by-schmid/index.html
+++ b/live-aura-by-schmid/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="ThemeStarz">
-    <title>SCHMID Incorporações - Aura</title>
+    <title>SCHMID Incorporações - Live Aura by schmid</title>
     
     <!-- 
       Esta tag 'meta' faz o redirecionamento para a página da Casa Aura 
