--- a/serenita/index.html
+++ b/serenita/index.html
@@ -479,14 +479,14 @@
               >
                 <h3>Vídeo de apresentação</h3>
                 <a
-                  href="https://www.youtube.com/watch?v=Z7iVSTQ_KKw"
+                  href="https://www.youtube.com/watch?v=RzgL2kCHemQ"
                   class="video-player video-popup"
                   title="Video apresentação"
                 >
                   <i class="arrow_triangle-right play-icon"></i>
                   <div class="has-overlay">
                     <img
-                      src="../assets/img/evidencias/image-video.webp"
+                      src="../assets/img/serenita/image-video.webp"
                       loading="lazy"
                       alt="Miniatura vídeo"
                       width="554"
@@ -678,7 +678,7 @@
                       <iframe
                         style="height: 100%; width: 100%; border: 0"
                         frameborder="0"
-                        src="https://www.google.com/maps/embed/v1/place?q=Rod.+Lix+da+Cunha,+5100+Cidade+Nova+II,+Indaiatuba+-+SP+13347-530&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"
+                        src="https://www.google.com/maps/embed/v1/place?q=Estr.+Mun+do+Sapezal,+500+Chacaras+Alvorada,+Indaiatuba+-+SP+13337-162&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"
                         title="Mapa"
                       ></iframe>
                     </div>
@@ -795,9 +795,9 @@
             <div class="row">
               <div class="col-md-4 col-sm-4">
                 <p>
-                  Rod. Lix da Cunha, 5100<br />
-                  Cidade Nova II, Indaiatuba - SP<br />
-                  13347-530
+                  Estr. Mun. do Sapezal, 500<br />
+                  Chácaras Alvorada, Indaiatuba - SP<br />
+                  13337-162
                 </p>
               </div>
               <!--end col-md-4-->
